tweaked styling. fixed double scrollbars

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,24 @@
 section#index {
-	width: 50%;
+	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: flex-start;
+	justify-content: center;
+	box-sizing: border-box;
 	align-items: flex-start;
+	flex-wrap: wrap;
 	padding: 0.15em;
 	margin: auto;
 	padding-bottom: 2em;
+	overflow-y: scroll;
+}
+
+section#index section {
+	width: 60%;
+}
+
+section#index img {
+	width: 90%;
+	margin: auto;
 }
 
 section#hero h1 {
@@ -28,7 +40,7 @@ section#hero a:hover {
 }
 
 section#mosaic-images {
-	width: 100%;
+	width: 100% !important;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
